separated music controller files

--- a/Project 1/Base.lproj/Main.storyboard
+++ b/Project 1/Base.lproj/Main.storyboard
@@ -1365,7 +1365,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0cm-U5-dJ6"/>
+        <segue reference="wx8-yg-pS5"/>
         <segue reference="asg-HO-f0n"/>
     </inferredMetricsTieBreakers>
     <resources>
